Maaslin added with devel version

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -292,7 +292,7 @@ and covariate structures. For more details, you can check their [official
 tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
 
 
-```{r maaslin2, results = "hide", eval=FALSE}
+```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
 # for both the asv/otu table as well as meta data 
 asv <- t(assay(tse))
@@ -316,7 +316,7 @@ fit_data <- Maaslin2(
 
 Which genera are identified as differentially abundant? (leave out "head" to see all).
 
-```{r, maaslin2kable, eval=FALSE}
+```{r, maaslin2kable, eval=TRUE}
 kable(head(filter(fit_data$results, qval <= 0.05)))
 ```
 
