--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -358,6 +358,129 @@ kable(head(filter(as.data.frame(res$output$Geographical_locationPune), reject)))
 
 
 
+### Comparison of the methods
+
+When we compare the methods in the context of a research question, we could
+look at e.g. at whether they agree based on the applied decision criterion
+(e.g. adjusted p value < 0.05). That is what we illustrate here. First we will 
+look at how many taxa were identified by each method to begin with. In the next
+step we will look at the intersection of identified taxa. To achieve that, we
+first create a dataframe that summarises the decision criterion for each method
+and shows a score from 0 to 3 indicating how many methods agreed on a particular
+taxon.
+
+
+```{r linda2, eval=TRUE}
+# change genus names to otu ids for ancombc results to make it joinable with others
+id_switch <- as.data.frame(rowData(tse)) %>%
+  rownames_to_column("taxid") %>%
+  select(taxid, genus)
+abc_res <- select(out$res, genus = taxon, ancombc = diff_Geographical_locationPune) %>%
+  left_join(id_switch, by = "genus") %>%
+  select(-genus)
+
+# join all results together
+summ <- full_join(
+    rownames_to_column(aldex_out, "taxid") %>%
+      select(taxid, aldex2 = wi.eBH),
+    abc_res,
+    by = "taxid") %>%
+  full_join(
+    select(fit_data$results, taxid = feature, maaslin2 = qval), 
+    by = "taxid") %>%
+    full_join(
+      rownames_to_column(as.data.frame(res$output$Geographical_locationPune), "taxid") %>%
+        select(taxid, LinDA = reject), 
+      by = "taxid") %>%
+  mutate(
+    across(c(aldex2, maaslin2), ~ .x <= 0.05),
+    # the following line would be necessary without prevalence filtering 
+    # as some methods output NA
+    #across(-genus, function(x) ifelse(is.na(x), FALSE, x)),
+    ancombc = ifelse(is.na(ancombc), FALSE, ancombc),
+    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA))),
+  )
+
+# This is how it looks like:
+kable(head(summ))
+```
+
+Now we can answer our questions:
+
+```{r, eval=TRUE}
+# how many genera were identified by each method?
+summarise(summ, across(where(is.logical), sum)) %>%
+  kable()
+# which genera are identified by all methods?
+filter(summ, score == 4) %>% kable()
+```
+
+We see that each method identified at least some genera as differentially
+abundant. Many of those that were identified by ALDEx2,
+were also identified by the other methods. Let us plot the data for
+any method or for those taxa that were identified by all methods:
+
+
+```{r, daplotting, eval=TRUE, fig.width=20,fig.height=4}
+# Data
+data(peerj13075)
+tse <- peerj13075
+
+# Add relative abundances and clr abundances
+tse <- transformCounts(tse, method="relabundance")
+tse <- transformCounts(tse, method="clr", pseudocount=1)
+
+# Subset to prevalent taxa (exclude rare taxa at 10 percent prevalence using 0 detection threshold):
+# do the subsetting based on the relative abundance assay
+tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 10/100, assay.type="relabundance")
+
+# Subset to certain geolocations
+tse <- tse[ ,tse$Geographical_location %in% c("Pune", "Nashik")]
+
+# Let us make the geo location a factor
+tse$Geographical_location <- factor(tse$Geographical_location)
+
+# Create a jittered boxplot for each genus 
+assay.type <- "relabundance"
+plot_data <- data.frame(t(assay(tse, assay.type)))
+plot_data$Geographical_location <- tse$Geographical_location
+plots <- pmap(select(summ, taxid, score), function(taxid, score) {
+  ggplot(plot_data, aes_string(x="Geographical_location", y=taxid)) +
+    geom_boxplot(outlier.shape = NA) +
+    geom_jitter(width = 0.2) +
+    scale_y_log10() + 
+    labs(title=glue::glue("{taxid}"), x="", y=glue::glue("Abundance ({assay.type})")) +    
+    theme_bw() +
+    theme(legend.position = "none")
+})
+
+# now we can show only those genera that have at least score 3 (or 2 or 1)
+robust_plots <- plots[summ$score == 4 & !is.na(summ$score)] 
+
+# to display this nicely in the book we use patchwork here:
+# (we show first ones)
+robust_plots[[1]] + 
+  robust_plots[[2]] + 
+  robust_plots[[3]] + 
+  robust_plots[[4]] +
+  robust_plots[[5]] +
+  robust_plots[[6]] +
+  plot_layout(nrow = 1)
+  
+# or if we have most trust in any specific method we can show genera that 
+# are differentially abundant according to that method and then look in the
+# title how many methods also identified it (we only show first 6 here):
+ancombc_plots <- plots[summ$ancombc & !is.na(summ$score)] 
+ancombc_plots[[1]] + 
+  ancombc_plots[[2]] + 
+  ancombc_plots[[3]] + 
+  ancombc_plots[[4]] +
+  ancombc_plots[[5]] +
+  ancombc_plots[[6]] 
+```
+
+
+
 ### Confounding variables
 
 To perform causal inference, it is crucial that the method is able to include
