--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -85,7 +85,7 @@ assay(tse, "counts")[1:5,1:7]
 ```
 
 To illustrate the use of multiple assays, the relative abundance data can be 
-calcualted and stored along the original count data using `relAbundanceCounts`.
+calculated and stored along the original count data using `relAbundanceCounts`.
 
 ```{r}
 tse <- relAbundanceCounts(tse)
@@ -112,6 +112,8 @@ fact a requirement for any `SummarizedExperiment` object.
 ```{r coldata}
 colData(tse)
 ```
+
+
 
 ### rowData
 
@@ -228,6 +230,114 @@ Table: (\#tab:options) **Recommended options for storing multiple data tables in
 
 
 
+## Demonstration data {#example-data}
+
+Open demonstration data for testing and benchmarking purposes is
+available from multiple locations. This chapter introduces some
+options. The other chapters of this book provide ample examples about
+the use of the data.
+
+
+
+
+### Package data {#package-data}
+
+The `mia` R package contains example data sets that are direct
+conversions from the alternative `phyloseq` container to the
+`TreeSummarizedExperiment` container.
+
+List the [available
+datasets](https://microbiome.github.io/mia/reference/index.html) in
+the `mia` package:
+
+
+```{r, message=FALSE, eval=FALSE}
+library(mia)
+data(package="mia")
+```
+
+Load the `GlobalPatterns` data from the `mia` package:
+
+```{r, message=FALSE}
+data("GlobalPatterns", package="mia")
+GlobalPatterns
+```
+
+
+Check the documentation for this data set:
+
+```{r, message=FALSE, echo=FALSE}
+help(GlobalPatterns)
+```
+
+
+
+### ExperimentHub data
+
+[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html)
+provides a variety of data resources, including the
+[microbiomeDataSets](https://bioconductor.org/packages/release/data/experiment/html/microbiomeDataSets.html)
+package [@Morgan2021; @microlahti2021].
+
+A table of the available data sets is available through the
+`availableDataSets` function.
+
+```{r, message=FALSE}
+library(microbiomeDataSets)
+availableDataSets()
+```
+
+All data are downloaded from ExperimentHub and cached for local
+re-use. Check the [man pages of each
+function](https://microbiome.github.io/microbiomeDataSets/reference/index.html)
+for a detailed documentation of the data contents and references. Let
+us retrieve a `r Biocpkg("MultiAssayExperiment")` data set:
+
+```{r eval=FALSE, message=FALSE}
+# mae <- HintikkaXOData()
+# Since HintikkaXOData is now added to mia, we can load it directly from there
+# We suggest to check other datasets from microbiomeDataSets
+data(HintikkaXOData)
+mae <- HintikkaXOData
+```
+
+Data is available in `r Biocpkg("SummarizedExperiment")`, `r
+Biocpkg("TreeSummarizedExperiment")` and `r
+Biocpkg("MultiAssayExperiment")` data containers; see the separate
+page on [alternative
+containers](https://microbiome.github.io/OMA/multitable.html) for more
+details.
+
+
+### Curated metagenomic data
+
+[curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html)
+is a large collection of curated human microbiome data sets, provided as
+`(Tree)SummarizedExperiment` objects [@Pasolli2017]. The resource
+provides curated human microbiome data including gene families, marker
+abundance, marker presence, pathway abundance, pathway coverage, and
+relative abundance for samples from different body sites. See the
+package homepage for more details on data availability and access.
+
+As one example, let us retrieve the Vatanen (2016) [@Vatanen2016] data
+set. This is a larger collection with a bit longer download time.
+
+```{r, message=FALSE, eval=FALSE}
+library(curatedMetagenomicData)
+tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
+```
+
+
+
+### Other data sources
+
+The current collections provide access to vast microbiome data
+resources. The output has to be converted into TreeSE/MAE separately.
+
+- [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
+- [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
+
+
 ## Loading experimental microbiome data
 
 ### 16S workflow
@@ -319,87 +429,138 @@ rownames(tse) <- paste0("ASV", seq( nrow(tse) ))
 tse
 ```
 
+
+
 ### Import from external files
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
 (Tree)SummarizedExperiment object but the details depend on the file
-format. Here, we provide examples for common formats.
+format. Here, we provide examples for common formats. 
+
+
+#### CSV import
 
 **CSV data tables** can be imported with the standard R functions,
   then converted to the desired format. For detailed examples, you can
   check the [Bioconductor course
   material](https://bioconductor.org/help/course-materials/2019/BSS2019/04_Practical_CoreApproachesInBioconductor.html)
-  by Martin Morgan. The following example reads abundance tables,
-  taxonomic mapping tables, and sample metadata, assuming that the
-  input data files are properly prepared with appropriate row and
-  column names.
+  by Martin Morgan. You can also check the [example
+  files](https://github.com/microbiome/OMA/tree/master/data) and
+  construct your own CSV files accordingly.
+
+Recommendations for the CSV files are the following. File names are
+arbitrary; we refer here to the same names than in the examples:
+
+- Abundance table (`assay_taxa.csv`): data matrix (features x
+  samples); first column provides feature IDs, the first row provides
+  sample IDs; other values should be numeric (abundances).
+
+- Row data (`rowdata_taxa.csv`): data table (features x info); first
+  column provides feature IDs, the first row provides column headers;
+  this file usually contains the taxonomic mapping between different
+  taxonomic levels. Ideally, the feature IDs (row names) match one-to-one with
+  the abundance table row names. 
+
+- Column data (`coldata.csv`): data table (samples x info); first
+  column provides sample IDs, the first row provides column headers;
+  this file usually contains the sample metadata/phenodata (such as
+  subject age, health etc). Ideally, the sample IDs match one-to-one with
+  the abundance table column names. 
+
+After you have set up the CSV files, you can read them in R:
 
 ```{r importingcsv1, message=FALSE}
-count_file <- "data/assay_taxa.csv"
-tax_file <- "data/rowdata_taxa.csv"
+count_file  <- "data/assay_taxa.csv"
+tax_file    <- "data/rowdata_taxa.csv"
 sample_file <- "data/coldata.csv"
 
 # Load files
-counts  <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
-tax     <- read.csv(tax_file)     # Taxonomy table (to rowData)
-samples <- read.csv(sample_file)  # Sample data (to colData)
+counts  <- read.csv(count_file, row.names=1)   # Abundance table (e.g. ASV data; to assay data)
+tax     <- read.csv(tax_file, row.names=1)     # Taxonomy table (to rowData)
+samples <- read.csv(sample_file, row.names=1)  # Sample data (to colData)
 ```
+
+After reading the data in R, ensure the following:
+
+- abundance table (`counts`): numeric `matrix`, with feature IDs as
+  rownames and sample IDs as column names
+
+- rowdata (`tax`): `DataFrame`, with feature IDs as rownames. If this
+  is a `data.frame` you can use the function `DataFrame()` to change
+  the format. Column names are free but in microbiome analysis they
+  usually they refer to taxonomic ranks. The rownames in rowdata
+  should match with rownames in abundance table.
+
+- coldata (`samples`): `DataFrame`, with sample IDs as rownames. If
+  this is a `data.frame` you can use the function `DataFrame()` to
+  change the format.  Column names are free. The rownames in coldata
+  should match with colnames in abundance table.
 
 **Always ensure that the tables have rownames!** The _TreeSE_ constructor compares 
-rownames and makes sure that, for example, right samples are linked with right patient.
+rownames and ensures that, for example, right samples are linked with right patient.
+
+Also ensure that the row and column names match one-to-one between
+abundance table, rowdata, and coldata:
 
 ```{r importingcsv2}
-# Add rownames and remove an additional column
-rownames(counts) <- counts$X
-counts$X <- NULL
+# Match rows and columns
+counts <- counts[rownames(tax), rownames(samples)]
 
-# Add rownames and remove an additional column
-rownames(samples) <- samples$X
-samples$X <- NULL
-
-# Add rownames and remove an additional column
-rownames(tax) <- tax$X
-tax$X <- NULL
-
-# As an example:
-# If e.g. samples do not match between colData and counts table, you must order 
-# counts based on colData
-if( any( colnames(counts) != rownames(samples) ) ){
-    counts <- counts[ , rownames(samples) ]
-}
-
-# And same with rowData and counts...
-if( any( rownames(counts) != rownames(tax) ) ){
-    counts <- counts[ rownames(tax), ]
-}
+# Let us ensure that the data is in correct (numeric matrix) format:
+counts <- as.matrix(counts)
 ```
 
-The tables must be in correct format:
+If you hesitate about the format of the data, you can compare to one
+of the available demonstration data sets, and make sure that your data
+components have the same format.
 
-   - counts --> matrix
+There are many different source files and many different ways to read
+data in R. One can do data manipulation in R as well. Investigate the
+entries as follows.
+
+
+```{r demodata, message=FALSE}
+# coldata rownames match assay colnames
+all(rownames(samples) == colnames(counts)) # our data set
+class(samples) # should be data.frame or DataFrame
+
+# rowdata rownames match assay rownames
+all(rownames(tax) == rownames(counts)) # our data set
+class(tax) # should be data.frame or DataFrame
+
+# Counts 
+class(counts) # should be a numeric matrix
+```
+
+
+### Constructing TreeSummarizedExperiment
+
+Now let us create the TreeSE object from the input data tables. Here
+we also convert the data objects in their preferred formats:
+
+   - counts --> numeric matrix
    - rowData --> DataFrame
    - colData --> DataFrame
-   
+
+The `SimpleList` could be used to include multiple alternative assays, if
+necessary.
+
+
 ```{r importingcsv3}
-# Ensure that the data is in correct format
-
-# counts should be in matrix format
-counts <- as.matrix(counts)
-# And it should be added to a SimpleList
-assays <-  SimpleList(counts = counts)
-
-# colData and rowData should be in DataFrame format
-colData <- DataFrame(colData)
-rowData <- DataFrame(rowData)
-
 # Create a TreeSE
-tse_taxa <- TreeSummarizedExperiment(assays = assays,
-                                     colData = samples,
-                                     rowData = tax)
+tse_taxa <- TreeSummarizedExperiment(assays =  SimpleList(counts = counts),
+                                     colData = DataFrame(samples),
+                                     rowData = DataFrame(tax))
 
 tse_taxa
 ```
+
+Now you should have a ready-made TreeSE data object that can be used in downstream analyses.
+
+
+### Constructing MultiAssayExperiment
+
 To construct a _MultiAssayExperiment_ object, just combine multiple _TreeSE_ data containers. 
 Here we import metabolite data from the same study.
 
@@ -408,23 +569,13 @@ count_file <- "data/assay_metabolites.csv"
 sample_file <- "data/coldata.csv"
 
 # Load files
-counts  <- read.csv(count_file)  
-samples <- read.csv(sample_file)
+counts  <- read.csv(count_file, row.names=1)  
+samples <- read.csv(sample_file, row.names=1)
 
-# Add rownames and remove an additional column
-rownames(counts) <- counts$X
-counts$X <- NULL
-rownames(samples) <- samples$X
-samples$X <- NULL
+# Create a TreeSE for the metabolite data
+tse_metabolite <- TreeSummarizedExperiment(assays = SimpleList(concs = as.matrix(counts)),
+                                           colData = DataFrame(samples))
 
-# Convert into right format
-counts <- as.matrix(counts)
-assays <-  SimpleList(concs = counts)
-colData <- DataFrame(colData)
-
-# Create a TreeSE
-tse_metabolite <- TreeSummarizedExperiment(assays = assays,
-                                           colData = samples)
 tse_metabolite
 ```
 
@@ -441,6 +592,10 @@ mae <- MultiAssayExperiment(experiments = experiments)
 mae
 ```
 
+
+
+### Import functions for standard formats
+
 Specific import functions are provided for:
 
 -   Biom files (see `help(mia::loadFromBiom)`)
@@ -448,7 +603,7 @@ Specific import functions are provided for:
 -   Mothur files (see `help(mia::loadFromMothur)`)
 
 
-#### Biom example
+#### Biom import
 
 This example shows how Biom files are imported into a
 `TreeSummarizedExperiment` object.
@@ -650,115 +805,6 @@ Conversion is possible between other data formats. Interested readers can refer 
 * [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)
 * [loadFromMetaphlan](https://microbiome.github.io/mia/reference/loadFromMetaphlan.html)
 * [readQZA](https://microbiome.github.io/mia/reference/loadFromQIIME2.html)
-
-
-## Demonstration data {#example-data}
-
-Open demonstration data for testing and benchmarking purposes is
-available from multiple locations. This chapter introduces some
-options. The other chapters of this book provide ample examples about
-the use of the data.
-
-
-
-
-### Package data {#package-data}
-
-The `mia` R package contains example data sets that are direct
-conversions from the alternative `phyloseq` container to the
-`TreeSummarizedExperiment` container.
-
-List the [available
-datasets](https://microbiome.github.io/mia/reference/index.html) in
-the `mia` package:
-
-
-```{r, message=FALSE, eval=FALSE}
-library(mia)
-data(package="mia")
-```
-
-Load the `GlobalPatterns` data from the `mia` package:
-
-```{r, message=FALSE}
-data("GlobalPatterns", package="mia")
-GlobalPatterns
-```
-
-
-Check the documentation for this data set:
-
-```{r, message=FALSE, echo=FALSE}
-help(GlobalPatterns)
-```
-
-
-
-### ExperimentHub data
-
-[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html)
-provides a variety of data resources, including the
-[microbiomeDataSets](https://bioconductor.org/packages/release/data/experiment/html/microbiomeDataSets.html)
-package [@Morgan2021; @microlahti2021].
-
-A table of the available data sets is available through the
-`availableDataSets` function.
-
-```{r, message=FALSE}
-library(microbiomeDataSets)
-availableDataSets()
-```
-
-All data are downloaded from ExperimentHub and cached for local
-re-use. Check the [man pages of each
-function](https://microbiome.github.io/microbiomeDataSets/reference/index.html)
-for a detailed documentation of the data contents and references. Let
-us retrieve a `r Biocpkg("MultiAssayExperiment")` data set:
-
-```{r eval=FALSE, message=FALSE}
-# mae <- HintikkaXOData()
-# Since HintikkaXOData is now added to mia, we can load it directly from there
-# We suggest to check other datasets from microbiomeDataSets
-data(HintikkaXOData)
-mae <- HintikkaXOData
-```
-
-Data is available in `r Biocpkg("SummarizedExperiment")`, `r
-Biocpkg("TreeSummarizedExperiment")` and `r
-Biocpkg("MultiAssayExperiment")` data containers; see the separate
-page on [alternative
-containers](https://microbiome.github.io/OMA/multitable.html) for more
-details.
-
-
-### Curated metagenomic data
-
-[curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html)
-is a large collection of curated human microbiome data sets, provided as
-`(Tree)SummarizedExperiment` objects [@Pasolli2017]. The resource
-provides curated human microbiome data including gene families, marker
-abundance, marker presence, pathway abundance, pathway coverage, and
-relative abundance for samples from different body sites. See the
-package homepage for more details on data availability and access.
-
-As one example, let us retrieve the Vatanen (2016) [@Vatanen2016] data
-set. This is a larger collection with a bit longer download time.
-
-```{r, message=FALSE, eval=FALSE}
-library(curatedMetagenomicData)
-tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
-```
-
-
-
-### Other data sources
-
-The current collections provide access to vast microbiome data
-resources. The output has to be converted into TreeSE/MAE separately.
-
-- [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
-- [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
-
 
 
 ## Session Info {-}
