--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -286,17 +286,19 @@ kable(head(res))
 
 ### MaAsLin2 
 
-Next, we will illustrate how to use MaAsLin2, which is the next generation of
-MaAsLin. As it is based on generalized linear models, it is flexible for different study designs and covariate
-structures. The official package tutorial can be found [here](https://github.com/biobakery/biobakery/wiki/maaslin2). 
+Next, we will illustrate the use of MaAsLin2. The method is based on
+generalized linear models. It is flexible for different study designs
+and covariate structures. For more details, you can check their [official
+tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
+
 
 ```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
 # for both the asv/otu table as well as meta data 
 asv <- t(assay(tse))
 meta_data <- data.frame(colData(tse))
-# you can specifiy different GLMs/normalizations/transforms. We used similar
-# settings as in Nearing et al. (2021) here:
+# We can specify different GLMs/normalizations/transforms.
+# Let us use similar settings as in Nearing et al. (2021):
 fit_data <- Maaslin2(
   asv,
   meta_data,
@@ -305,7 +307,7 @@ fit_data <- Maaslin2(
   fixed_effects = "Geographical_location",
   # random_effects = c(...), # you can also fit MLM by specifying random effects
   # specifying a ref is especially important if you have more than 2 levels
-  reference = "Geographical_location,Pune",  
+  # reference = "Geographical_location,Pune",  
   normalization = "TSS",
   standardize = FALSE,
   min_prevalence = 0 # prev filterin already done
@@ -352,6 +354,8 @@ res <- linda(
 # to scan the table for genera where H0 could be rejected:
 kable(head(filter(as.data.frame(res$output$Geographical_locationPune), reject)))
 ```
+
+
 
 
 ### Comparison of the methods
