--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -99,8 +99,17 @@ library(phyloseq)
 library(ALDEx2)
 library(Maaslin2)
 library(MicrobiomeStat)
-library(ANCOMBC)
-library(GUniFrac)
+
+if(!require(ANCOMBC)){
+  BiocManager::install("ANCOMBC")
+  library(ANCOMBC)
+
+}
+if(!require(GUniFrac)){
+  install.packages("GUniFrac")
+  library(GUniFrac)
+}
+
 
 # set random seed because some tools can randomly vary and then produce 
 # different results:
@@ -118,10 +127,6 @@ tse$Geographical_location <- factor(tse$Geographical_location)
 count(as.data.frame(colData(tse)), Geographical_location) %>% kable()
 ```
 
-
-
-
-
 ### Prevalence Filtering 
 
 Before we jump to our analyses, we may want to perform prevalence filtering.
@@ -134,7 +139,6 @@ do this in `mia`:
 ```{r}
 tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 0.1)
 ```
-
 
 
 
@@ -156,7 +160,6 @@ Kruskal-Wallis-test. For more complex study designs, there is a possibility to
 utilize the `glm` functionality within ALDEx2. The Benjamini-Hochberg procedure
 is applied in any case to correct for multiple testing. Below we show a simple
 example that illustrates the workflow.
-
 
 
 ```{r, aldex2, eval=TRUE}
@@ -239,9 +242,6 @@ rownames_to_column(aldex_out, "genus") %>%
   kable()
 ```
 
-
-
-
 ### ANCOM-BC
 
 The analysis of composition of microbiomes with bias correction
@@ -278,24 +278,27 @@ that we specify.
 
 
 ```{r ancombc2, warning = FALSE, eval=TRUE}
+# make phyloseq object
+otu <- otu_table(assay(tse), taxa_are_rows = T)
+taxa <- tax_table(as.matrix(rowData(tse)))
+meta <- sample_data(as.data.frame(colData(tse)))
+phy <- phyloseq(otu,taxa,meta)
 # perform the analysis 
-out <- ancombc2(
-  data = tse,
-  tax_level="genus",
-  fix_formula = "Geographical_location", 
+out <- ancombc(
+  phyloseq = phy,
+  formula = "Geographical_location", 
   p_adj_method = "fdr", 
-  prv_cut = 0, # prev filtering has been done above already
   lib_cut = 0, 
   group = "Geographical_location", 
   struc_zero = TRUE, 
   neg_lb = TRUE,
-  iter_control = list(tol = 1e-5, max_iter = 20, verbose = FALSE),
-  em_control = list(tol = 1e-5, max_iter = 20), # use max_iter >= 100 on real data 
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
-# store the results in res 
-res <- out$res
+# store the FDR adjusted results [test on v2.0.3] 
+ancombc_out <- cbind.data.frame(taxid = out$res$q_val$taxon, ancombc = as.vector(out$res$q_val$Geographical_locationPune))
+# store the FDR adjusted results [test on v1.2.2] 
+# ancombc_out <- out$res$q_val %>% rownames_to_column('taxid') %>% dplyr::rename(ancombc = 2)
 ```
 
 The object `out` contains all model output. Again, see the 
@@ -309,7 +312,7 @@ abundant between the groups (again, keep in mind that the answer is not
 black-white). Below we show the first 6 entries of this dataframe:  
 
 ```{r, eval=TRUE}
-kable(head(res))
+kable(head(ancombc_out))
 ```
 
 
@@ -321,7 +324,6 @@ generalized linear models. It is flexible for different study designs
 and covariate structures. For more details, you can check their [official
 tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
 
-
 ```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
 # for both the asv/otu table as well as meta data 
@@ -329,7 +331,7 @@ asv <- t(assay(tse))
 meta_data <- data.frame(colData(tse))
 # We can specify different GLMs/normalizations/transforms.
 # Let us use similar settings as in Nearing et al. (2021):
-fit_data <- Maaslin2(
+maaslin2_out <- Maaslin2(
   asv,
   meta_data,
   output = "DAA example",
@@ -337,7 +339,7 @@ fit_data <- Maaslin2(
   fixed_effects = "Geographical_location",
   # random_effects = c(...), # you can also fit MLM by specifying random effects
   # specifying a ref is especially important if you have more than 2 levels
-  # reference = "Geographical_location,Pune",  
+  reference = "Geographical_location,Pune",  
   normalization = "TSS",
   standardize = FALSE,
   min_prevalence = 0 # prev filterin already done
@@ -347,13 +349,12 @@ fit_data <- Maaslin2(
 Which genera are identified as differentially abundant? (leave out "head" to see all).
 
 ```{r, maaslin2kable, eval=TRUE}
-kable(head(filter(fit_data$results, qval <= 0.05)))
+kable(head(filter(maaslin2_out$results, qval <= 0.05)))
 ```
 
 A folder will be created that is called like the above specified
 output.  It contains also figures to visualize the difference between
 genera for the significant ones.
-
 
 
 ### LinDA 
@@ -387,8 +388,6 @@ linda_out <- linda.res$output$Geographical_locationPune
 kable(head(filter(as.data.frame(linda_out), reject)))
 ```
 
-
-
 ### ZicoSeq
 
 Subsequently, we add a linear model and permutation-based method. This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components:
@@ -415,12 +414,10 @@ kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
 
-```{r}
+```{r ZicoSeqplot, eval=TRUE}
 ## x-axis is the effect size: R2 * direction of coefficient
 ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj, meta.dat = meta, pvalue.type ='p.adj.fdr')
 ```
-
-
 
 
 
@@ -436,35 +433,20 @@ and shows a score from 0 to 3 indicating how many methods agreed on a particular
 taxon.
 
 
-```{r linda2, eval=TRUE}
-# change genus names to otu ids for ancombc results to make it joinable with others
-id_switch <- as.data.frame(rowData(tse)) %>%
-  rownames_to_column("taxid") %>%
-  select(taxid, genus)
-abc_res <- select(out$res, genus = taxon, ancombc = diff_Geographical_locationPune) %>%
-  left_join(id_switch, by = "genus") %>%
-  select(-genus)
-
-# join all results together
-summ <- full_join(
-    rownames_to_column(aldex_out, "taxid") %>%
-      select(taxid, aldex2 = wi.eBH),
-    abc_res,
-    by = "taxid") %>%
+```{r comparison, eval=TRUE}
+summ <- full_join(rownames_to_column(aldex_out, "taxid") %>% dplyr::select(taxid, aldex2 = wi.eBH),
+    ancombc_out,by = "taxid") %>%
   full_join(
-    select(fit_data$results, taxid = feature, maaslin2 = qval), 
+    dplyr::select(maaslin2_out$results, taxid = feature, maaslin2 = qval), 
     by = "taxid") %>%
-    full_join(
-      rownames_to_column(as.data.frame(res$output$Geographical_locationPune), "taxid") %>%
-        select(taxid, LinDA = reject), 
-      by = "taxid") %>%
+    full_join(linda_out %>% rename(LinDA=padj) %>% dplyr::select(LinDA)%>% rownames_to_column('taxid') ) %>%
+  full_join(zicoseq_out %>% dplyr::select(p.adj.fdr) %>% rename(ZicoSeq = p.adj.fdr) %>% rownames_to_column('taxid')) %>%
   mutate(
-    across(c(aldex2, maaslin2), ~ .x <= 0.05),
+    across(c(aldex2: ZicoSeq), ~ .x <= 0.05),
     # the following line would be necessary without prevalence filtering 
     # as some methods output NA
-    #across(-genus, function(x) ifelse(is.na(x), FALSE, x)),
-    ancombc = ifelse(is.na(ancombc), FALSE, ancombc),
-    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA))),
+    #across(-taxid, function(x) ifelse(is.na(x), FALSE, x)),
+    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA, ZicoSeq)))
   )
 
 # This is how it looks like:
@@ -478,7 +460,7 @@ Now we can answer our questions:
 summarise(summ, across(where(is.logical), sum)) %>%
   kable()
 # which genera are identified by all methods?
-filter(summ, score == 4) %>% kable()
+filter(summ, score == 5) %>% kable()
 ```
 
 We see that each method identified at least some genera as differentially
@@ -494,7 +476,7 @@ tse <- peerj13075
 
 # Add relative abundances and clr abundances
 tse <- transformCounts(tse, method="relabundance")
-tse <- transformCounts(tse, method="clr", pseudocount=1)
+tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
 
 # Subset to prevalent taxa (exclude rare taxa at 10 percent prevalence using 0 detection threshold):
 # do the subsetting based on the relative abundance assay
@@ -510,17 +492,18 @@ tse$Geographical_location <- factor(tse$Geographical_location)
 assay.type <- "relabundance"
 plot_data <- data.frame(t(assay(tse, assay.type)))
 plot_data$Geographical_location <- tse$Geographical_location
-plots <- pmap(select(summ, taxid, score), function(taxid, score) {
+plots <- pmap(dplyr::select(summ, taxid, score), function(taxid, score) {
   ggplot(plot_data, aes_string(x="Geographical_location", y=taxid)) +
     geom_boxplot(outlier.shape = NA) +
     geom_jitter(width = 0.2) +
-    scale_y_log10() + 
+    # scale_y_log10() + # log trans will cause 0 values missing 
+    scale_y_sqrt() + 
     labs(title=glue::glue("{taxid}"), x="", y=glue::glue("Abundance ({assay.type})")) +    
     theme_bw() +
     theme(legend.position = "none")
 })
 
-# now we can show only those genera that have at least score 3 (or 2 or 1)
+# now we can show only those genera that have at least score 5 (or 4 or 3 or 2 or 1)
 robust_plots <- plots[summ$score == 4 & !is.na(summ$score)] 
 
 # to display this nicely in the book we use patchwork here:
@@ -545,6 +528,8 @@ ancombc_plots[[1]] +
   ancombc_plots[[6]] 
 ```
 
+
+
 ### Confounding variables
 
 Confounders are common for microbiome studies. In general, it can be classified into 3 types:
@@ -554,37 +539,69 @@ Confounders are common for microbiome studies. In general, it can be classified 
 Adjusting confounder is necessary and important to reach a valid conclusion. To perform causal inference, it is crucial that the method is able to include covariates in the model. This is not possible with e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC, LDM, Aldex2, Corncob,MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow this. Below we show how to include a confounder/covariate in ANCOMBC, LinDA and ZicoSeq.
 
 
-To perform causal inference, it is crucial that the method is able to include
-covariates in the model. This is not possible with e.g. the Wilcoxon test.
-Other methods such as both ANCOM methods, ALDEx2, LinDA, MaAsLin2 and others
-allow this. Below we show how to include a covariate in ANCOM-BC.
-It is very similar for all the methods that allow this. Since in this dataset
-there are no covariates, I first simulate a new variable and add it to the TSE
-object.
+#### ANCOMBC
 
-
-```{r, eval=TRUE}
-# FIXME: switch to a faster example / method
-out_cov = ancombc2(
-  data = tse, 
-  fix_formula = "Geographical_location + Age", # here we add Age to the model
+```{r ancombc_adj, eval=TRUE}
+# make phyloseq object
+otu <- otu_table(assay(tse), taxa_are_rows = T)
+taxa <- tax_table(as.matrix(rowData(tse)))
+meta <- sample_data(as.data.frame(colData(tse)))
+phy <- phyloseq(otu,taxa,meta)
+# perform the analysis 
+ancombc_cov <- ancombc(
+  phyloseq = phy,
+  formula = "Geographical_location + Age", 
   p_adj_method = "fdr", 
-  prv_cut = 0,  # we did that already
   lib_cut = 0, 
-  group = "Geographical_location",
+  group = "Geographical_location", 
   struc_zero = TRUE, 
-  neg_lb = TRUE, 
-  iter_control = list(tol = 1e-5, max_iter = 20, verbose = FALSE),
-  em_control = list(tol = 1e-5, max_iter = 20),
+  neg_lb = TRUE,
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
-
 # now the model answers the question: holding Age constant, are 
 # bacterial taxa differentially abundant? Or, if that is of interest,
 # holding phenotype constant, is Age associated with bacterial abundance?
 # Again we only show the first 6 entries.
-kable(head(out_cov$res))
+kable(head(ancombc_cov$res$q_val))
+```
+
+#### LinDA
+
+```{r linda_adj, eval=TRUE}
+otu.tab <- as.data.frame(assay(tse))
+meta <- as.data.frame(colData(tse))
+linda_cov <- linda(
+  otu.tab, 
+  meta, 
+  formula = '~ Geographical_location + Age', 
+  alpha = 0.05, 
+  prev.filter = 0, 
+  mean.abund.filter = 0)
+linda.res <- linda_cov$output$Geographical_locationPune
+kable(head(filter(linda.res, reject==T)))
+
+```
+
+
+
+#### ZicoSeq
+
+```{r ZicoSeq_adj, eval=TRUE}
+set.seed(123)
+otu.tab <- as.matrix(assay(tse))
+meta <- as.data.frame(colData(tse)) 
+zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta, 
+                                 feature.dat = otu.tab,
+                                 grp.name = 'Geographical_location',
+                                 adj.name = 'Gender', 
+                                 feature.dat.type = 'count',
+                                 prev.filter = 0,
+                                 mean.abund.filter = 0,
+                                 max.abund.filter = 0,
+                                 return.feature.dat = T)
+zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw, p.adj.fdr=zicoseq.obj$p.adj.fdr) 
+kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
 In the next section of this book chapter we cover methods that can also take
@@ -592,13 +609,7 @@ into account the phylogenetic information of bacterial taxa to perform
 group-wise associations.
 
 
-
 ## Tree-based methods
-
-In the next section of this book chapter we cover methods that can also take
-into account the phylogenetic information of bacterial taxa to perform 
-group-wise associations.
-
 
 ### Group-wise associations testing based on balances
 
@@ -610,12 +621,5 @@ For testing associations based on balances, check the philr R/Bioconductor packa
 ```{r sessionInfo, echo=FALSE, results='asis'}
 prettySessionInfo()
 ```
-
-
-
-
-
-
-
 
 
