resolve repeated entry of reference

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -28,20 +28,30 @@ has also been criticized recently [@Quinn2021].
 
 ### Examples and tools
 
-Due to the complex data characteristics of microbiome sequencing data, differential abundance analysis of microbiome data faces many statistical challenges, including:
-  (1) Highly variable. The abundance of a specific taxon could range over several orders of magnitude. 
-  (2) Zero-inflated. In a typical microbiome dataset, more than 70% of the values are zeros. Zeros could be due to either physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
-  (3) Compositional. Increase or decrease in the (absolute) abundance of one taxon at the sampling site will lead to apparent changes in the relative abundances of other taxa in the sample. 
+Due to the complex data characteristics of microbiome sequencing data, differential abundance analysis of microbiome data faces many statistical challenges [@Yang2022], including:
+  
+- Highly variable. The abundance of a specific taxon could range over several orders of magnitude. 
+  
+- Zero-inflated. In a typical microbiome dataset, more than 70% of the values are zeros. Zeros could be due to either physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
+  
+- Compositional. Increase or decrease in the (absolute) abundance of one taxon at the sampling site will lead to apparent changes in the relative abundances of other taxa in the sample. 
 
-To address zero inflation, both over-dispersed count models and zero-inflated mixture models/hurdle models have been proposed. (a) Examples of over-dispersed count models include the negative binomial model used by edgeR and DESeq2, beta-binomial model used by corncorb. (b) Examples of zero-inflated mixture models include zero-inflated log-normal/normal mixture model used by metagenomeSeq and RAIDA, zero-inflated beta-binomial model used by ZIBB, and zero-inflated negative binomial model used by Omnibus. 
-For methods working on proportion data, Bayesian methods have been used to impute the zeros, accounting for sampling variability and sequencing depth variation. Examples include ALDEx2 and eBay. 
-Other methods use the pseudo-count approach to impute the zeros, such as MaAsLin2 and ANCOMBC.
+As summarized in @Yang2022, to address the above statistical chanllenegs:
 
-Different strategies have been used to address compositional effects, including:
-  (a) Robust normalization. edgeR, DESeq2, metagenomeSeq, ALDEx2 and Omnibus, respectively used the Trimmed mean of M-values (TMM), relative log expression (RLE), cumulative sum scaling (CSS), centered log-ratio transformation (CLR), and geometric mean of pairwise ratios (GMPR) normalization. Wrench normalization corrects the compositional bias by an empirical Bayes approach, which has been recommended in metagenomeSeq.
-  (b) Reference taxa approach. DACOMP, RAIDA. 
-  (c) Analyzing the pattern of pairwise log ratios, such as ANCOM.
-  (d) Bias-correction. ANCOMBC.
+- Over-dispersed count models has been proposed to address zero inflation, such as the negative binomial model used by edgeR [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by corncorb [@Martin2021]. 
+
+- Zero-inflated mixture models has aslo been proposed to address zero inflation, such as zero-inflated log-normal/normal mixture model used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015], zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and zero-inflated negative binomial model used by Omnibus [@Omnibus2018]. 
+
+- Bayesian methods have been used to impute the zeros for methods working on proportion data, accounting for sampling variability and sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and eBay [@Liu2020]. 
+
+- Other methods use the pseudo-count approach to impute the zeros, such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
+
+- Different strategies have been used to address compositional effects, including:
+
+  - Robust normalization. For example, trimmed mean of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2 [@Love2014], cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects the compositional bias by an empirical Bayes approach, which has been recommended in metagenomeSeq [@Paulson2017] tutorial.
+  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015]. 
+  - Analyzing the pattern of pairwise log ratios, such as ANCOM [@Mandal2015].
+  - Bias-correction used by ANCOMBC [@ancombc2020].
 
 The most popular tools, without going into evaluating whether or not they perform well for this task, are:  
 
@@ -59,11 +69,11 @@ The most popular tools, without going into evaluating whether or not they perfor
 - LDM [@Hu2020]
 - RAIDA [@Sohn2015]
 - DACOMP [@Brill2019]
-- Omnibus [@Chen2018]
+- Omnibus [@Omnibus2018]
 - eBay [@Liu2020]
 - ZINQ [@Ling2021]
 - ANCOM [@Mandal2015]
-- fastANCOM [@Zhou2022]
+- fastANCOM [@fastANCOM2022]
 - [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)  
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
@@ -73,16 +83,13 @@ who compared all these listed methods across 38
 different datasets. Because different methods use different approaches
 (parametric vs non-parametric, different normalization techiniques, assumptions
 etc.), results can differ between methods. 
-Unfortunately, as @Nearing2022 point out, they
-can differ substantially. Also, more recently @Yang2022 comprehensively evaluated these methods via a Semi-parametric framework and 106 real datasets. @Yang2022 also pointed out, different DAA tools could sometimes produce quite discordant results, opening to the possibility of cherry-picking the tool in favor of one’s own hypothesis. Therefore, it is highly recommended to pick several
-methods to get an idea about how robust and potentially reproducible your
-findings are depending on the method. In this section we demonstrate 4 methods
-that can be recommended based on recent literature (ANCOM-BC, ALDEx2, Maaslin2, LinDA and ZicoSeq) and we will compare the results between them.
+Unfortunately, as @Nearing2022 point out, they can differ substantially. Also, more recently @Yang2022 comprehensively evaluated these methods via a Semi-parametric framework and 106 real datasets. @Yang2022 also pointed out, different DAA tools could sometimes produce quite discordant results, opening to the possibility of cherry-picking the tool in favor of one’s own hypothesis. Therefore, it is highly recommended to pick several methods to get an idea about how robust and potentially reproducible your findings are depending on the method. In this section we demonstrate 4 methods that can be recommended based on recent literature (ANCOM-BC [@ancombc2020], ALDEx2 [@Gloor2016], Maaslin2 [@Mallick2020], LinDA [@Zhou2022] and ZicoSeq [@Yang2022]) and we will compare the results between them.
+
 Note that the purpose of this section is to show how to perform DAA in R, not
 how to correctly do causal inference. Depending on your experimental setup
 and your theory, you must determine how to specify any model exactly. 
 E.g., there might be confounding factors that might drive (the absence of)
-differences between the shown groups that we ignore here for simplicity.
+differences between the shown groups that we ignore here for simplicity. Or your dataset is repeated sampling design, matched-pair design or the general longitudianl design.
 However, we will show how you could include covariates in those models.
 Furthermore, we picked a dataset that merely has microbial abundances in a TSE
 object as well as a grouping variable in the sample data. We simplify the
@@ -245,7 +252,7 @@ rownames_to_column(aldex_out, "genus") %>%
 ### ANCOM-BC
 
 The analysis of composition of microbiomes with bias correction
-(ANCOM-BC) [@Das2020] is a recently developed method for differential
+(ANCOM-BC) [@ancombc2020] is a recently developed method for differential
 abundance testing. It is based on an earlier published approach
 [@Mandal2015].  The previous version of ANCOM was among the methods
 that produced the most consistent results and is probably a
@@ -319,7 +326,7 @@ kable(head(ancombc_out))
 
 ### MaAsLin2 
 
-Next, we will illustrate the use of MaAsLin2. The method is based on
+Next, we will illustrate the use of MaAsLin2 [@Mallick2020]. The method is based on
 generalized linear models. It is flexible for different study designs
 and covariate structures. For more details, you can check their [official
 tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
@@ -390,10 +397,11 @@ kable(head(filter(as.data.frame(linda_out), reject)))
 
 ### ZicoSeq
 
-Subsequently, we add a linear model and permutation-based method. This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components:
-- Winsorization to decrease the influence of outliers;
-- Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
-- Reference-based multiple-stage normalization to address compositional effects;
+Subsequently, we add a linear model and permutation-based method, see details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html). This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components: 
+
+  - 1) Winsorization to decrease the influence of outliers;
+  - 2) Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
+  - 3) Reference-based multiple-stage normalization to address compositional effects;
 
 
 ```{r ZicoSeq, eval=TRUE}
@@ -406,6 +414,7 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
                                  adj.name = NULL, 
                                  feature.dat.type = 'count',
                                  prev.filter = 0,
+                                 perm.no = 999,
                                  mean.abund.filter = 0,
                                  max.abund.filter = 0,
                                  return.feature.dat = T)
@@ -425,7 +434,7 @@ ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj, meta.dat = meta, pvalue.type ='p.adj.fdr
 
 When we compare the methods in the context of a research question, we could
 look at e.g. at whether they agree based on the applied decision criterion
-(e.g. adjusted p value < 0.05). That is what we illustrate here. First we will 
+(e.g. adjusted p value <= 0.05). That is what we illustrate here. First we will 
 look at how many taxa were identified by each method to begin with. In the next
 step we will look at the intersection of identified taxa. To achieve that, we
 first create a dataframe that summarises the decision criterion for each method
@@ -525,7 +534,8 @@ ancombc_plots[[1]] +
   ancombc_plots[[3]] + 
   ancombc_plots[[4]] +
   ancombc_plots[[5]] +
-  ancombc_plots[[6]] 
+  ancombc_plots[[6]] +
+  plot_layout(nrow = 1)
 ```
 
 
@@ -533,10 +543,12 @@ ancombc_plots[[1]] +
 ### Confounding variables
 
 Confounders are common for microbiome studies. In general, it can be classified into 3 types:
-(1) Biological confounder, such as age, sex, etc. 
-(2) Technical confounder that caused by data collection, storage, DNA extraction, sequencing process, etc. 
-(3) Confounder caused by experimental models, such as cage effect, sample background, etc. 
-Adjusting confounder is necessary and important to reach a valid conclusion. To perform causal inference, it is crucial that the method is able to include covariates in the model. This is not possible with e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC, LDM, Aldex2, Corncob,MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow this. Below we show how to include a confounder/covariate in ANCOMBC, LinDA and ZicoSeq.
+
+- Biological confounder, such as age, sex, etc. 
+- Technical confounder that caused by data collection, storage, DNA extraction, sequencing process, etc. 
+- Confounder caused by experimental models, such as cage effect, sample background, etc. 
+
+Adjusting confounder is necessary and important to reach a valid conclusion. To perform causal inference, it is crucial that the method is able to include covariates in the model. This is not possible with e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC, LDM, Aldex2, Corncob, MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow this. Below we show how to include a confounder/covariate in ANCOMBC, LinDA and ZicoSeq.
 
 
 #### ANCOMBC
@@ -597,6 +609,7 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
                                  adj.name = 'Gender', 
                                  feature.dat.type = 'count',
                                  prev.filter = 0,
+                                 perm.no = 999,
                                  mean.abund.filter = 0,
                                  max.abund.filter = 0,
                                  return.feature.dat = T)
