--- a/book.bib
+++ b/book.bib
@@ -863,7 +863,7 @@ year = {2022}
 }
 
 @Article{Chen2016,
-  author =	 {Yunshun Chen and Aaron A T Lun and Gordon K Smyth},
+  author =	 {Chen, Yunshun and Lun, Aaron TL and Smyth, Gordon K},
   title =	 {From reads to genes to pathways: differential
                   expression analysis of RNA-Seq experiments using
                   Rsubread and the edgeR quasi-likelihood pipeline},
@@ -1258,7 +1258,7 @@ https://github.com/thomasp85/patchwork},
 }
 
 
-@Article{Zhou2022,
+@Article{fastANCOM2022,
   title = {fastANCOM: a fast method for analysis of compositions of microbiomes},
   shorttitle = {{{fastANCOM}}},
   author = {Zhou, Chao and Wang, Huimin and Zhao,Hongyu and Wang, Tao},
@@ -1289,7 +1289,7 @@ https://github.com/thomasp85/patchwork},
 @Article{Zhu2021,
   title = {Constraining PERMANOVA and LDM to within-set comparisons by projection improves the efficiency of analyses of matched sets of microbiome data},
   shorttitle = {{{LDM}}},
-  author = {Zhengyi, Zhu and Satten, Glen A and Mitchell, Caroline and Hu, Yijuan},
+  author = {Zhu, Zhengyi and Satten, Glen A and Mitchell, Caroline and Hu, Yijuan},
   year =	 {2021},
   month = jul,
   journal = {Microbiome},
@@ -1326,10 +1326,10 @@ https://github.com/thomasp85/patchwork},
 }
 
 
-@Article{Chen2018,
+@Article{Omnibus2018,
   title = {An omnibus test for differential distribution analysis of microbiome sequencing data},
   shorttitle = {{{Omnibus}}},
-  author = {Chen, Jun and Emily, King and Rebecca, Deek and Zhi, Wei and Yue, Yu and Diane, Grill and Karla, Ballman},
+  author = {Chen, Jun and King, Emily and Deek, Rebecca and Wei, Zhi and Yu, Yue and Grill, Diane and Ballman, Karla},
   year = {2018},
   month = feb,
   journal = {Bioinformatics},
@@ -1343,7 +1343,7 @@ https://github.com/thomasp85/patchwork},
 @Article{Liu2020,
   title = {An empirical Bayes approach to normalization and differential abundance testing for microbiome data},
   shorttitle = {{{eBay}}},
-  author = {Chen, Jun and Emily, King and Rebecca, Deek and Zhi, Wei and Yue, Yu and Diane, Grill and Karla, Ballman},
+  author = {Liu, Tiantian and Zhao, Hongyu and Wang, Tao},
   year = {2020},
   month = jun,
   journal = {BMC Bioinformatics},
@@ -1381,7 +1381,7 @@ https://github.com/thomasp85/patchwork},
 
 
 
-@Article{Hu2018,
+@Article{ZIBB2018,
   title = {A Zero-inflated Beta-binomial Model for Microbiome Data Analysis},
   shorttitle = {{{ZIBB}}},
   author = {Hu, Tao and Paul, Gallins and Yi‐Hui, Zhou},
