solve bib build error

--- a/book.bib
+++ b/book.bib
@@ -1356,7 +1356,7 @@ https://github.com/thomasp85/patchwork},
 
 @Article{Ling2021,
   title = {Powerful and robust non-parametric association testing for microbiome data via a zero-inflated quantile approach (ZINQ)},
-  shorttitle = {{{eBay}}},
+  shorttitle = {{{ZINQ}}},
   author = {Ling, Wodan and Ni, Zhao and Anna, M. Plantinga and Lenore, J. Launer and Anthony, A. Fodor and Katie, A. Meyer and Michael, C. Wu},
   year = {2021},
   month = sep,
@@ -1369,12 +1369,14 @@ https://github.com/thomasp85/patchwork},
 
 @Article{Kumar2018,
   title = {Analysis and correction of compositional bias in sparse sequencing count data},
-  shorttitle = {{{eBay}}},
-  author = {Kumar, M. Senthil, Eric V. Slud, Kwame Okrah, Stephanie C. Hicks, Sridhar Hannenhalli, and Héctor Corrada Bravo},
+  shorttitle = {{{Wrench}}},
+  author = {Kumar, M. Senthil and Slud, V. Eric and Okrah, Kwame and Hicks, C. Stephanie and Hannenhalli, Sridhar and Bravo, Corrada Héctor},
   year = {2018},
   month = nov,
   journal = {BMC genomics},
-  page ={799},
+  volume = {19},
+  issue = {1},
+  page ={1-23},
   langid = {english}
 }
 
@@ -1384,10 +1386,12 @@ https://github.com/thomasp85/patchwork},
 @Article{ZIBB2018,
   title = {A Zero-inflated Beta-binomial Model for Microbiome Data Analysis},
   shorttitle = {{{ZIBB}}},
-  author = {Hu, Tao and Paul, Gallins and Yi‐Hui, Zhou},
+  author = {Hu, Tao and Gallins, Paul and Zhou, Yi‐Hui},
   year = {2018},
   month = jul,
   journal = {Stat},
+  volume = {7},
+  issue = {1},
   doi = {10.1002/sta4.185},
   langid = {english}
 }
